// 06/1/2024
- The options in Settings don't "jump" now upon choosing
- Changed the game font from Sans-Serif to Monospace
- Added the frame under the Settings Category title
- Added new Settings Category
	+ Settings
- Added the ability to change the prefix
- Fixed the "Remove Image" option still working upon selection despite the image is not loaded

// 05/31/2024
- Added categories for Settings
	+ Controls
	+ Customization
- Added options
	+ Choose Player's color
	+ Choose Player's image
- Changed the quit time from 90 ticks to 50 ticks
=============
- Fixed a crash (error) by starting playing
	+ The lines that spawn a particle has been moved from draw() to update() method and it failed to get the local variables
=============
- Fixed particles get drawn on top of the Dash text
=============
- Fixed the HurtBoxes on the Main Menu go off-sync
- Fixed the Wall-Bound HurtBoxes wouldn't go off-screen when its duration finishes
- The HurtBoxes on the Main Menu are now 50x50 in size

// 05/30/2024
- The Dash doesn't go below zero now
- The Dash now always decreases by 1 when used despite you're moving diagonally
- The Dash text abive the player is aligned to the center now

// 05/29/2024
- Added an external kind of state
	+ Quittable
- The Dash text now follows the player instead of being in the top-left corner of the screen
- By holding Esc you can now quit to the Main Menu
	+ In "Game Over" state it instantly quits to the Main Menu
=============
- The background HurtBoxes on Main Menu don't spawn randomly now

// 05/28/2024
- The Player is now able to recharge the dash when not moving but still holding space
- The game now saves controls to the local storage upon changing them
- The game now actually restarts instead of reloading the page (this is the last change made btw)
- Added Settings Menu
	+ Controls
- Fixed the "Game Over" panel's size and text position

// 05/27/2024
- Added Controls instructions in Main Menu
=============