@@ -14,6 +14,7 @@
 	</style>
 	<script src="source/Util.js"></script>
 	<script src="source/Queue.js"></script>
+	<script src="source/Level.js"></script>
 	<script src="source/Context.js"></script>
 	<script src="source/SettingsCategories/SettingsCategory.js"></script>
 	<script src="source/SettingsCategories/Main.js"></script>
@@ -25,6 +26,7 @@
 	<script src="source/States/Settings.js"></script>
 	<script src="source/States/Play.js"></script>
 	<script src="source/States/GameOver.js"></script>
+	<script src="source/States/Success.js"></script>
 	<script src="source/States/Quittable.js"></script>
 	<script src="source/Entity.js"></script>
 	<script src="source/Entities/Player.js"></script>
