@@ -46,3 +46,36 @@ class MovingTrailParticle extends Particle {
 		this.color = `rgba(${rgb.r},${rgb.g},${rgb.b},${this.alpha})`;
 	}
 }
+
+class ResizingTrailParticle extends Particle {
+	constructor (pos, size, color, increment = 1, alpha = 1, decrement = 0.025) {
+		super(pos, size, color);
+		this.increment = increment;
+		this.alpha = alpha;
+		this.decrement = decrement;
+	}
+
+	step () {
+		this.alpha -= this.decrement;
+		
+		this.size.width += this.increment;
+		this.size.height += this.increment;
+
+		if (this.alpha <= 0) {
+			this.destroy();
+		}
+		
+		let rgb = rgbFromString(this.color);
+		this.color = `rgba(${rgb.r},${rgb.g},${rgb.b},${this.alpha})`;
+	}
+
+	draw () {
+		let x = this.position.x;
+		let y = this.position.y;
+		let width = this.size.width;
+		let height = this.size.height;
+
+		game.context.fillStyle = this.color;
+		game.context.fillRect(x - width / 2, y - height / 2, width, height);
+	}
+}
