@@ -141,8 +141,7 @@ Settings.Customization = class extends SettingsCategory {
 
 			let oldFont = game.context.font;
 			game.context.textBaseline = "top";
-			// game.context.font = "15px Monospace";
-			game.setFontSize(15);
+			game.context.fontSize = 15;
 
 			game.context.textAlign = "left";
 			game.context.fillStyle = "#ffffff";
