@@ -1,3 +1,9 @@
+// 06/3/2024
+- Added level system
+- Added progress bar in the "Play" state
+- Added "Success" State
+- Added a new "ResizingTrailParticle" particle
+
 // 06/1/2024
 - The options in Settings don't "jump" now upon choosing
 - Changed the game font from Sans-Serif to Monospace
